--- a/jobs/logstash-indexer/templates/config/logstash.conf.erb
+++ b/jobs/logstash-indexer/templates/config/logstash.conf.erb
@@ -26,7 +26,7 @@ filter {
 }
 
 output {
-  stdout { debug => true debug_format => "json"}
+  stdout { codec => json }
 
   elasticsearch_http {
     host => "<%= p("elasticsearch.host") %>"
