Switched to ES transport protocoll

--- a/jobs/logstash-indexer/templates/config/logstash.conf.erb
+++ b/jobs/logstash-indexer/templates/config/logstash.conf.erb
@@ -56,5 +56,15 @@ output {
   elasticsearch_http {
     host => "<%= p("elasticsearch.host") %>"
     index => "%{app_id}-%{+YYYY.MM.dd}"
+    idle_flush_time => 5
+    workers => 3
+  }
+  elasticsearch {
+    host => "<%= p("elasticsearch.host") %>"
+    index => "%{app_id}-%{+YYYY.MM.dd}"
+    protocol => "transport"
+    idle_flush_time => <%= p("logstash.idle_flush_time") %>
+    workers => <%= p("logstash.workers") %>
+    cluster => "<%= p("elasticsearch.cluster") %>"
   }
 }
