--- a/jobs/logstash-syslog/templates/config/logstash.conf.erb
+++ b/jobs/logstash-syslog/templates/config/logstash.conf.erb
@@ -10,6 +10,12 @@ input {
 }
 
 output {
-  stdout { codec => json }
-  redis { host => "<%= p("redis.host") %>" port => <%= p("redis.port") %> data_type => "list" key => "<%= p('logstash.redis.key') %>" }
+  # stdout { codec => json }
+
+  redis {
+    host => "<%= p("redis.host") %>"
+    port => <%= p("redis.port") %>
+    data_type => "list"
+    key => "<%= p('logstash.redis.key') %>"
+  }
 }
