--- a/jobs/logstash-cf/templates/config/logstash.conf.erb
+++ b/jobs/logstash-cf/templates/config/logstash.conf.erb
@@ -118,7 +118,7 @@ filter {
       }
 
     }
-    
+
 }
 
 
@@ -126,7 +126,7 @@ output {
 
   elasticsearch {
     host => "<%= p("elasticsearch.host") %>"
-    index => "%{app_id}-%{+YYYY.MM.dd}"
+    index => "<%= p("logstash.index") %>-%{+YYYY.MM.dd}"
     protocol => "transport"
     idle_flush_time => <%= p("logstash.idle_flush_time") %>
     workers => <%= p("logstash.workers") %>
