--- a/jobs/logstash-syslog/templates/config/logstash.conf.erb
+++ b/jobs/logstash-syslog/templates/config/logstash.conf.erb
@@ -2,10 +2,12 @@ input {
   tcp {
     port => <%= p('syslog.port') %>
     type => syslog
+    add_field => [ "type", "syslog" ]
   }
   udp {
     port => <%= p('syslog.port') %>
     type => syslog
+    add_field => [ "type", "syslog" ]
   }
 }
 
