--- a/jobs/logstash-indexer/templates/config/logstash.conf.erb
+++ b/jobs/logstash-indexer/templates/config/logstash.conf.erb
@@ -110,7 +110,7 @@ output {
   elasticsearch {
     host => "<%= p("elasticsearch.host") %>"
     index => "%{app_id}-%{+YYYY.MM.dd}"
-    protocol => "http"
+    protocol => "<%= p("elasticsearch.protocol") %>"
     idle_flush_time => <%= p("logstash.idle_flush_time") %>
     workers => <%= p("logstash.workers") %>
     cluster => "<%= p("elasticsearch.cluster") %>"
