--- a/jobs/logstash-indexer/templates/data/properties.sh.erb
+++ b/jobs/logstash-indexer/templates/data/properties.sh.erb
@@ -10,3 +10,4 @@ export JOB_INDEX=<%= index %>
 export JOB_FULL="$NAME/$JOB_INDEX"
 
 export FILTER_WORKERS=<%= p("logstash.filter.workers") %>
+export LS_HEAP_SIZE="<%= p("logstash.heap_size") %>"
