--- a/jobs/logstash-indexer/templates/config/logstash.conf.erb
+++ b/jobs/logstash-indexer/templates/config/logstash.conf.erb
@@ -152,7 +152,7 @@ filter {
 
   } else if [syslog_program] =~ /vcap\..*/ {
     grok {
-      match           => { "syslog_message" => "(?:\[job=%{NOTSPACE:job.name}|-) +(?:index=%{NOTSPACE:job.index}\]|-) %{GREEDYDATA:_message_json}" }
+      match           => { "syslog_message" => "(?:\[job=%{NOTSPACE:job-name}|-) +(?:index=%{NOTSPACE:job-index}\]|-) %{GREEDYDATA:_message_json}" }
       tag_on_failure  => [ "_grokparsefailure-cf-vcap" ]
     }
 
@@ -175,10 +175,10 @@ filter {
 
       mutate {
         rename  => [ "syslog_program", "shipper.name" ]
-        replace => [ "job.host", "%{source.host}" ]
+        replace => [ "job-host", "%{source.host}" ]
         gsub    => [
           "shipper.name", "\.", "_",
-          "job.name", "\.", "_"
+          "job-name", "\.", "_"
         ]
       }
 
